--- a/Free Code Camp/1. titanic example/ML Learning.ipynb
+++ b/Free Code Camp/1. titanic example/ML Learning.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "a01d2a5d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -47,24 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4c6eb74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%tensorflow_version` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%tensorflow_version 2.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "4f0705f1",
    "metadata": {},
    "outputs": [],
@@ -84,30 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b62b4a75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   survived     sex   age  n_siblings_spouses  parch     fare  class     deck  \\\n",
-      "0         0    male  22.0                   1      0   7.2500  Third  unknown   \n",
-      "1         1  female  38.0                   1      0  71.2833  First        C   \n",
-      "2         1  female  26.0                   0      0   7.9250  Third  unknown   \n",
-      "3         1  female  35.0                   1      0  53.1000  First        C   \n",
-      "4         0    male  28.0                   0      0   8.4583  Third  unknown   \n",
-      "\n",
-      "   embark_town alone  \n",
-      "0  Southampton     n  \n",
-      "1    Cherbourg     n  \n",
-      "2  Southampton     y  \n",
-      "3  Southampton     n  \n",
-      "4   Queenstown     y  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load data set\n",
     "\n",
@@ -120,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "14410ea1",
    "metadata": {},
    "outputs": [
@@ -237,7 +201,7 @@
        "4   Queenstown     y  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c6cc879b",
    "metadata": {},
    "outputs": [
@@ -352,7 +316,7 @@
        "max     80.000000            8.000000    5.000000  512.329200"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c6dc0381",
    "metadata": {},
    "outputs": [
@@ -373,7 +337,7 @@
        "(627, 9)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "61f57242",
    "metadata": {},
    "outputs": [
@@ -394,7 +358,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5b1e34d1",
    "metadata": {},
    "outputs": [
@@ -427,7 +391,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -450,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "9b086eee",
    "metadata": {},
    "outputs": [
@@ -460,7 +424,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -483,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "33a4c225",
    "metadata": {},
    "outputs": [
@@ -493,7 +457,7 @@
        "Text(0.5, 0, '% survive')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -516,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "590ac6f9",
    "metadata": {},
    "outputs": [
@@ -532,6 +496,8 @@
     "CATEGORICAL_COLUMNS = ['sex','n_siblings_spouses','parch','class','deck','embark_town','alone']\n",
     "NUMERIC_COLUMNS = ['age','fare']\n",
     "\n",
+    "#This section of the code turns the Categorical data into numerical data\n",
+    "\n",
     "feature_columns = []\n",
     "for feature_name in CATEGORICAL_COLUMNS:\n",
     "    vocabulary = dftrain[feature_name].unique()\n",
@@ -545,8 +511,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "71a9cd82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This segment of code converts the pandas data set into a usable tensorflow dataset\n",
+    "\n",
+    "def make_input_fn(data_df,label_df,num_epochs=10,shuffle = True, batch_size = 32):\n",
+    "    def input_function():\n",
+    "        ds =tf.data.Dataset.from_tensor_slices((dict(data_df), label_df))\n",
+    "        if shuffle:\n",
+    "            ds = ds.shuffle(1000)\n",
+    "        ds = ds.batch(batch_size).repeat(num_epochs)\n",
+    "        return ds\n",
+    "    return input_function\n",
+    "\n",
+    "train_input_fn = make_input_fn(dftrain,y_train)\n",
+    "eval_input_fn = make_input_fn(dfeval,y_eval, num_epochs = 1, shuffle = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f6fd34d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using default config.\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\PARTI\\AppData\\Local\\Temp\\tmpt_x09fm7\n",
+      "INFO:tensorflow:Using config: {'_model_dir': 'C:\\\\Users\\\\PARTI\\\\AppData\\\\Local\\\\Temp\\\\tmpt_x09fm7', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
+      "graph_options {\n",
+      "  rewrite_options {\n",
+      "    meta_optimizer_iterations: ONE\n",
+      "  }\n",
+      "}\n",
+      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_checkpoint_save_graph_def': True, '_service': None, '_cluster_spec': ClusterSpec({}), '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_est = tf.estimator.LinearClassifier(feature_columns=feature_columns)\n",
+    "#This segment of code creates the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "be382abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.72727275\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_est.train(train_input_fn)#train the model on the training data\n",
+    "result = linear_est.evaluate(eval_input_fn) # test the model on the evaluation data\n",
+    "\n",
+    "clear_output()\n",
+    "print(result['accuracy'])#show accuracy of model relative to evaluation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "066961c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'accuracy': 0.72727275, 'accuracy_baseline': 0.625, 'auc': 0.82072246, 'auc_precision_recall': 0.77677846, 'average_loss': 0.5700313, 'label/mean': 0.375, 'loss': 0.5683151, 'precision': 0.60465115, 'prediction/mean': 0.5276339, 'recall': 0.7878788, 'global_step': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "54804201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\PARTI\\AppData\\Local\\Temp\\tmpt_x09fm7\\model.ckpt-200\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "{'logits': array([-1.5827525], dtype=float32), 'logistic': array([0.17040603], dtype=float32), 'probabilities': array([0.829594  , 0.17040603], dtype=float32), 'class_ids': array([0], dtype=int64), 'classes': array([b'0'], dtype=object), 'all_class_ids': array([0, 1]), 'all_classes': array([b'0', b'1'], dtype=object)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = list(linear_est.predict(eval_input_fn))\n",
+    "print(result[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "854b875a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex                          male\n",
+      "age                          35.0\n",
+      "n_siblings_spouses              0\n",
+      "parch                           0\n",
+      "fare                         8.05\n",
+      "class                       Third\n",
+      "deck                      unknown\n",
+      "embark_town           Southampton\n",
+      "alone                           y\n",
+      "Name: 0, dtype: object\n",
+      "[0.829594   0.17040603]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dfeval.loc[0])\n",
+    "print(result[0]['probabilities'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2957bdc5",
    "metadata": {},
    "outputs": [],
    "source": []
