Hidden Markov Model example

--- a/Free Code Camp/Untitled Folder 1/Hidden Markov.ipynb
+++ b/Free Code Camp/Untitled Folder 1/Hidden Markov.ipynb
@@ -23,23 +23,64 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "73dc7144",
+   "id": "f439bb5b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#https://colab.research.google.com/drive/15Cyy2H7nT40sGR7TBN5wBvgTd57mVKay#forceEdit=true&sandboxMode=true&scrollTo=plVVG4fi55Jv\n",
+    "#Use link above for more information on the code below\n",
     "tfd = tfp.distributions  # making a shortcut for later on\n",
-    "initial_distribution = tfd.Categorical(probs=[0.2, 0.8])  # Refer to point 2 above\n",
+    "initial_distribution = tfd.Categorical(probs=[0.2, 0.8])  \n",
     "transition_distribution = tfd.Categorical(probs=[[0.5, 0.5],\n",
-    "                                                 [0.2, 0.8]])  # refer to points 3 and 4 above\n",
-    "observation_distribution = tfd.Normal(loc=[0., 15.], scale=[5., 10.])  # refer to point 5 above\n",
+    "                                                 [0.2, 0.8]]) \n",
+    "observation_distribution = tfd.Normal(loc=[0., 15.], scale=[5., 10.])  \n",
     "\n",
     "# the loc argument represents the mean and the scale is the standard devitation"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "71e3a7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tfd.HiddenMarkovModel(\n",
+    "    initial_distribution=initial_distribution,\n",
+    "    transition_distribution=transition_distribution,\n",
+    "    observation_distribution=observation_distribution,\n",
+    "    num_steps=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "110e9500",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.999999 11.1      10.830001 10.748999 10.724699 10.71741  10.715222]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = model.mean()\n",
+    "\n",
+    "# due to the way TensorFlow works on a lower level we need to evaluate part of the graph\n",
+    "# from within a session to see the value of this tensor\n",
+    "\n",
+    "# in the new version of tensorflow we need to use tf.compat.v1.Session() rather than just tf.Session()\n",
+    "with tf.compat.v1.Session() as sess:  \n",
+    "  print(mean.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1ccecde1",
+   "id": "5f87bfa3",
    "metadata": {},
    "outputs": [],
    "source": []
