added data conversion

--- a/Free Code Camp/Machine Learning Projects/Rock Paper Scissors/boilerplate-rock-paper-scissors/Creating the model.ipynb
+++ b/Free Code Camp/Machine Learning Projects/Rock Paper Scissors/boilerplate-rock-paper-scissors/Creating the model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "e87a81e7",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "0f67916e",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "array([[0.0, 'R', 'P', ..., 'R', 'R', 'R']], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,60 +42,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
+   "id": "61088953",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 200000)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "0c7e7194",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_values(value):\n",
-    "    \n",
-    "    if value == 'R':\n",
-    "        return 1\n",
-    "    elif value == 'P':\n",
-    "        return 2\n",
-    "    elif value == 'S':\n",
-    "        return 3\n",
-    "    else:\n",
-    "        return value"
+    "Mapping = {'R':1,'P':2,'S':3}\n",
+    "\n",
+    "def map_values(x):\n",
+    "    return Mapping.get(x, x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "8c5830c6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "ename": "NameError",
+     "evalue": "name 'v' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m converted_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([convert_values(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m data])\n",
-      "Cell \u001b[1;32mIn[24], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[0m converted_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[43mconvert_values\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m data])\n",
-      "Cell \u001b[1;32mIn[17], line 3\u001b[0m, in \u001b[0;36mconvert_values\u001b[1;34m(value)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert_values\u001b[39m(value):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mR\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m:\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m value \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m converted_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([Mapping[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mv\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m data])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'v' is not defined"
      ]
     }
    ],
    "source": [
-    "converted_data = np.array([convert_values(i) for i in data])"
+    "vectorized_map_values = np.vectorize(map_values)\n",
+    "converted_data = vectorized_map_values(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "47dbe7c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(<generator object <genexpr> at 0x000001C224164190>, dtype=object)"
+       "array(<generator object <genexpr> at 0x0000021E5C74EFF0>, dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
