changed data Batch method

--- a/Free Code Camp/Machine Learning Projects/Rock Paper Scissors/boilerplate-rock-paper-scissors/Creating the model.ipynb
+++ b/Free Code Camp/Machine Learning Projects/Rock Paper Scissors/boilerplate-rock-paper-scissors/Creating the model.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "e87a81e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "# Read the csv file\n",
     "df = pd.read_csv('data.csv', header=None)\n",
     "\n",
@@ -123,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cef5518c",
+   "id": "01a786bd",
    "metadata": {},
    "outputs": [
     {
@@ -2143,8 +2144,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "ecca961d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = tf.data.Dataset.from_tensor_slices(converted_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9974baa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TensorSliceDataset element_spec=TensorSpec(shape=(200000,), dtype=tf.float64, name=None)>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ee0150e1",
+   "id": "a1b07566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 20\n",
+    "batched_data= dataset.batch(BATCH_SIZE, drop_remainder=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f43361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batched_da"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cfaabea",
    "metadata": {},
    "outputs": [],
    "source": []
